sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: '=>' expected but ':' found.
			case 0 : Sort(pos+1)
                               ^